Delete unwanted dependencies